cabal-version:      3.0
name:               aoc2024

version:            0.1.0.0
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    exposed-modules:
        Day1
    hs-source-dirs: src
    build-depends:  base ^>=4.18.2.1
    default-language: Haskell2010

executable aoc2024
    import:           warnings
    main-is:          Main.hs
    build-depends:
        aoc2024,
        base ^>=4.18.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
