cabal-version:      3.0
name:               aoc2024

version:            0.1.0.0
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common extensions
    default-extensions:
        LambdaCase
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings
common warnings
    ghc-options: -Wall

library
    import: extensions
    exposed-modules:
        Day1
        Day2
        Day3
        Day4
        Day5
        Day6
        Day7
        Day8
        Day9
        Day10
        Day11
        Day12
        Day13
        Day14
        Day15
        Day16
        Day17
        Day18
        Day19
        Day20
    other-modules:
        Utils.String
        Utils.Lists
        Utils.Grid
    hs-source-dirs: src
    build-depends:
        base,
        containers,
        unordered-containers,
        hashable,
        text,
        parsec,
        binary,
        bytestring,
        vector,
        mtl
    default-language: GHC2021

executable aoc2024
    import:           warnings, extensions
    main-is:          Main.hs
    build-depends:
        aoc2024,
        base
    hs-source-dirs:   app
    default-language: GHC2021
